# spell-config

./: .gitignore  CMakeLists.txt  LICENSE
demo/: main.cpp
src/: document_node.cpp  spell.hpp
